@@ -1,3 +1,4 @@
+
 package com.dracolich777.afterlifeentombed.events;
 
 import com.dracolich777.afterlifeentombed.AfterlifeEntombedMod;
@@ -129,8 +130,8 @@ public class SethAvatarAbilities {
                 cap.setOneWithChaosTimeUsed(timeUsed);
                 
                 // 2 minutes = 2400 ticks
-                if (timeUsed >= 2400 && player instanceof ServerPlayer) {
-                    deactivateOneWithChaos((ServerPlayer) player, cap);
+                if (timeUsed >= 2400 && player instanceof ServerPlayer serverPlayer) {
+                    deactivateOneWithChaos(serverPlayer, cap);
                 }
             }
             
@@ -163,8 +164,8 @@ public class SethAvatarAbilities {
                 // You may need to use a mod like Pehkui for proper size scaling
                 
                 // 1 minute = 1200 ticks
-                if (activationTime >= 1200 && player instanceof ServerPlayer) {
-                    deactivateChaosIncarnate((ServerPlayer) player, cap, currentTime);
+                if (activationTime >= 1200 && player instanceof ServerPlayer serverPlayer) {
+                    deactivateChaosIncarnate(serverPlayer, cap, currentTime);
                 }
             }
             
@@ -402,7 +403,7 @@ public class SethAvatarAbilities {
                         event.setAmount(event.getAmount() + cap.getStoredDamage());
                         
                         if (player instanceof ServerPlayer serverPlayer) {
-                            GodAvatarHudHelper.sendNotification(serverPlayer, "Released " + String.format("%.1f", cap.getStoredDamage()) + " damage!", GodAvatarHudHelper.COLOR_ERROR, 40);
+                            GodAvatarHudHelper.sendNotification(serverPlayer, "Released " + "%.1f".formatted(cap.getStoredDamage()) + " damage!", GodAvatarHudHelper.COLOR_ERROR, 40);
                         }
                         
                         cap.setStoredDamage(0);
@@ -463,13 +464,6 @@ public class SethAvatarAbilities {
         // If already active, deactivate it
         if (cap.isChaosIncarnateActive()) {
             deactivateChaosIncarnate(player, cap, currentTime);
-            return;
-        }
-        
-        // Check cooldown
-        if (currentTime < cap.getChaosIncarnateCooldown()) {
-            long remaining = (cap.getChaosIncarnateCooldown() - currentTime) / 20;
-            GodAvatarHudHelper.sendCooldownMessage(player, "Chaos Incarnate", remaining);
             return;
         }
         
@@ -555,6 +549,15 @@ public class SethAvatarAbilities {
                 return;
             }
         }
+
+        // Check cooldown
+        if (currentTime < cap.getChaosIncarnateCooldown()) {
+            long remaining = (cap.getChaosIncarnateCooldown() - currentTime) / 20;
+            GodAvatarHudHelper.sendCooldownMessage(player, "Chaos Incarnate", remaining);
+            return;
+        }
+        
+        
         
         // Activate Chaos Incarnate
         cap.setChaosIncarnateActive(true);
